Add tool calling example for jlama (#106)
This will require https://github.com/langchain4j/langchain4j/pull/1661